--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
+    <meta theme-color content="#fb1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Dogs-Rede social para cachorros" />
+    <meta
+      name="description"
+      content="Dogs A melhor-rede social para cachorros"
+    />
+    <link rel="icon" href="/src//Assets/dogs.svg" />
     <title>Dogs</title>
   </head>
   <body>
